Delete user-dashboard.js, update next.config.js, add MainLayout to index.js, and update package.json

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "json-server": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "json-server": "^0.17.4",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
